--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 								procedures as QCDM,5S,5Why etc...
 								<br> After returning home I have decided to try learn to code as I have always been
 								drawn towards computers. I have passed Cisco's Python fundamentals and I have some
-								understanding of HTML,CSS,git,PostgreSQL. I am comfortable in Windows and Linux
+								understanding of HTML 5,CSS 3,git,PostgreSQL,Django. I am comfortable in Windows and
+								Linux
 								enviroment.
 							</p>
 							<p>What I'd like to learn:
