--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
 						</div>
 						<div class="col-sm-12 col-md-6 col-lg-12 col-xl-6 mb-4">
 							<div class="media tm-bg-transparent-black tm-border-white">
-								<a href="https://github.com/E-Murajda/Useful-Code/blob/master/bubble_sort.py"
+								<a href="https://github.com/E-Murajda/Useful-Code/blob/master/7segmentDisplay.py"
 									target="_blank"><i
-										class="fas fa-sort-numeric-up mr-4 tm-icon-circled tm-icon-media"></i></a>
+										class="fas fa-stopwatch mr-4 tm-icon-circled tm-icon-media"></i></a>
 								<div class="media-body">
-									<h3>Bubble</h3>
-									<p>Simple bubble sorter</p>
+									<h3>Display</h3>
+									<p>7 Segment Display</p>
 								</div>
 							</div>
 						</div>
